--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "author": "Maultasche",
   "license": "MIT",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+	"fileExample": "node example/fileExample.js"
   },
   "devDependencies": {
     "jest": "^21.2.1",
